[project]
name = "recallr"
version = "0.0.1"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "badri" }
]
requires-python = ">=3.10"
dependencies = []

[project.scripts]
recallr = "recallr:main"

[build-system]
requires = ["uv_build>=0.11.0,<0.12.0"]
build-backend = "uv_build"
